# talentlens_ai

./: .env.example  .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml  requirements.txt
docs/: AI_ARCHITECTURE.md  AI_DESIGN_RATIONALE.md  ARCHITECTURE_CHANGELOG.md  CURRENT_PROGRESS.md  DECISIONS.md  ENVIRONMENT_NOTES.md  EVALUATION.md  IMPLEMENTATION_ROADMAP.md  MODEL_REGISTRY.md  PROJECT_OVERVIEW.md  PROMPT_LIBRARY.md  RECRUITER_WORKFLOWS.md  RELEASE_NOTES.md  STYLE_GUIDE.md  SYSTEM_ARCHITECTURE.md  TROUBLESHOOTING.md  WORKING_LOGIC.md
notebooks/: resume_parser.ipynb
scripts/: compare_scores.py  compare_two.py  demo_jd_match.py  demo_scoring.py  evaluate_one.py
src/api/: __init__.py  main.py
src/hireintel_ai/: __init__.py
src/job_description/: __init__.py  extraction.py  ingestion.py
src/rag/: __init__.py  batch_chunk.py  build_index.py  chunker.py  chunking.py  embeddings.py  index.py  jd_match.py  retrieval.py  retriever.py
src/ranking/: __init__.py  ranker.py
src/resume_parsing/: __init__.py  batch_parse.py  header_normalization.py  ocr.py  parser.py  structured_profile.py
src/scoring/: __init__.py  batch_score.py  evaluate.py  evidence.py  graded_scorer.py  hybrid_scorer.py  keyword_scorer.py  semantic_scorer.py  tier_lookup.py
src/ui/: __init__.py  business_analyst_weight_form.py  recruiter_weight_config.py
src/weight_configuration/: __init__.py  normalize.py  template.py
tests/integration/: __init__.py  test_candidate_comparison.py  test_jd_match.py
tests/unit/: __init__.py  test_chunk_metadata.py  test_chunker.py  (+9 more)
(+30 files in other folders)
