[project]
name = "hireintel-ai"
version = "0.1.0"
description = "HireIntel AI candidate intelligence platform for recruiter-controlled screening and ranking."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "sentence-transformers",
  "pdfplumber",
  "pypdfium2",
  "pytesseract",
  "Pillow",
  "reportlab",
  "pydantic>=2",
  "pydantic-settings",
  "httpx",
  "streamlit",
  "fastapi",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
